.archive/kubernetes/main/apps/networking/ingresses/ingressRoutes/prowlarr/ingress-traefikCRD.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &name prowlarr
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: *name
          port: 9696
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
